--- a/june/week1/day 3/Assignment 1/index.html
+++ b/june/week1/day 3/Assignment 1/index.html
@@ -17,9 +17,8 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Product</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
       <button class="btn-primary">Login</button>
